@@ -186,6 +186,56 @@
             </build>
         </profile>
         <profile>
+            <id>docker-snapshot</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <docker>
+                                <publishRegistry>
+                                    <username>${env.GITHUB_ACTOR}</username>
+                                    <password>${env.GITHUB_TOKEN}</password>
+                                    <url>docker://ghcr.io</url>
+                                </publishRegistry>
+                            </docker>
+                            <image>
+                                <builder>paketobuildpacks/builder-jammy-buildpackless-base:latest</builder>
+                                <runImage>docker.io/paketobuildpacks/run-jammy-base:latest</runImage>
+                                <name>ghcr.io/elasticsoftwarefoundation/${project.artifactId}:${docker.image.version}</name>
+                                <publish>true</publish>
+                                <env>
+                                    <BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
+                                    <BP_JVM_JLINK_ENABLED>false</BP_JVM_JLINK_ENABLED>
+                                    <BP_SPRING_AOT_ENABLED>true</BP_SPRING_AOT_ENABLED>
+                                    <BP_JVM_CDS_ENABLED>false</BP_JVM_CDS_ENABLED>
+                                    <JAVA_TOOL_OPTIONS>-XX:+UseZGC -XX:+ZGenerational</JAVA_TOOL_OPTIONS>
+                                </env>
+                                <buildpacks>
+                                    <buildpack>gcr.io/paketo-buildpacks/ca-certificates</buildpack>
+                                    <buildpack>gcr.io/paketo-buildpacks/adoptium:latest</buildpack>
+                                    <buildpack>gcr.io/paketo-buildpacks/syft</buildpack>
+                                    <buildpack>gcr.io/paketo-buildpacks/executable-jar</buildpack>
+                                    <buildpack>gcr.io/paketo-buildpacks/spring-boot</buildpack>
+                                </buildpacks>
+                            </image>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>process-aot</goal>
+                                </goals>
+                                <configuration>
+
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>native</id>
             <build>
                 <pluginManagement>
